--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="sponsor-name">
                     <div class="sponsor-title-row">
                         <b>RENTAL HT KRAKSAAN</b>
-                        <a href="https://www.instagram.com/rentalhtkraksaan?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="ig-link">
+                        <a href="https://www.instagram.com/rentalhtkraksaan?igsh=d2NnaXdpMWhvam1o" target="_blank" class="ig-link">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
@@ -231,4 +231,5 @@
     </script>
 </body>
 </html>
+
 
