--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="sponsor-name">
                     <div class="sponsor-title-row">
                         <b>RENTAL HT KRAKSAAN</b>
-                        <a href="https://rentalhtkraksaan.vercel.app/zp1r5474qacs.html" target="_blank" class="ig-link">
+                        <a href="https://instagram.com/rentalhtkraksaan" target="_blank" class="ig-link">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
@@ -231,6 +231,7 @@
     </script>
 </body>
 </html>
+
 
 
 
