--- a/main.html
+++ b/main.html
@@ -256,7 +256,7 @@
             <div class="benefit-grid">
                 <div class="b-item"><i class="fas fa-snowflake"></i> Ruangan Ber-AC</div>
                 <div class="b-item"><i class="fas fa-utensils"></i> Lalapan Ayam/Telur</div>
-                <div class="b-item"><i class="fas fa-glass-whiskey"></i> Es Selasih Melon</div>
+                <div class="b-item"><i class="fas fa-glass-whiskey"></i> Es Sirup Selasih</div>
                 <div class="b-item"><i class="fas fa-hand-holding-heart"></i> Berbagi Takjil</div>
                 <div class="b-item"><i class="fas fa-gamepad"></i> Seru-seruan Game</div>
                 <div class="b-item"><i class="fas fa-camera"></i> Dokumentasi</div>
@@ -268,7 +268,7 @@
 
         <div class="footer-info">
             <div class="contact-grid">
-                <a href="https://wa.me/6285257671286" class="contact-item" target="_blank">
+                <a href="https://wa.me/6285722816046" class="contact-item" target="_blank">
                     <i class="fab fa-whatsapp"></i> Narahubung
                 </a>
                 <a href="https://wa.me/6282334587562" class="contact-item" target="_blank">
@@ -302,4 +302,5 @@
     </script>
 
 </body>
+
 </html>
