--- a/main.html
+++ b/main.html
@@ -227,7 +227,7 @@
             </div>
             <div class="info-box">
                 <i class="fas fa-map-marked-alt"></i>
-                <a href="https://maps.google.com" target="_blank">SMKN 2 Kraksaan <i class="fas fa-external-link-alt" style="font-size: 0.6rem; display:inline;"></i></a>
+                <a href="https://maps.app.goo.gl/hgYxz24DvhoNCaW29" target="_blank">SMKN 2 Kraksaan <i class="fas fa-external-link-alt" style="font-size: 0.6rem; display:inline;"></i></a>
             </div>
         </div>
 
@@ -304,4 +304,5 @@
 </body>
 
 </html>
+
 
